cthyb/3.0.x/_sources/cpp2rst_generated/triqs_cthyb/params_t.rst.txt
..
   Generated automatically by cpp2rst

.. highlight:: c
.. role:: red
.. role:: green
.. role:: param


.. _triqs_cthyb__params_t:

triqs_cthyb::params_t
=====================

*#include <triqs_cthyb.hpp>*

.. rst-class:: cppsynopsis

      class  :red:`params_t`

A struct combining both constr_params_t and solve_params_t


Public members
--------------

+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| beta                          | double                                                    |  Inverse temperature                                                                                                                                             |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| gf_struct                     | triqs::hilbert_space::gf_struct_t                         | block structure of the gf                                                                                                                                        |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| n_iw                          | int                                                       |  Number of Matsubara frequencies for gf<imfreq, matrix_valued>                                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| n_tau                         | int                                                       |  Number of tau points for gf<imtime, matrix_valued>                                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| n_l                           | int                                                       |  Number of Legendre polynomials for gf<legendre, matrix_valued>                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| h_int                         | triqs_cthyb::many_body_op_t                               |  Interacting part of the atomic Hamiltonian
 type: Operator                                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| n_cycles                      | long                                                      |  Number of QMC cycles                                                                                                                                            |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| partition_method              | std::string                                               |  Partition method
 type: str                                                                                                                                     |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| quantum_numbers               | std::vector<many_body_op_t>                               |  Quantum numbers
 type: list(Operator)
 default: []                                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| loc_n_min                     | int                                                       |  Restrict local Hilbert space to states with at least this number of particles
 default: 0                                                                       |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| loc_n_max                     | int                                                       |  Restrict local Hilbert space to states with at most this number of particles
 default: INT_MAX                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| length_cycle                  | long                                                      |  Length of a single QMC cycle
 default: 50                                                                                                                       |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| n_warmup_cycles               | long                                                      |  Number of cycles for thermalization
 default: 5000                                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| random_seed                   | long                                                      |  Seed for random number generator
 default: 34788 + 928374 * MPI.rank                                                                                            |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| random_name                   | std::string                                               |  Name of random number generator
 type: str                                                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| max_time                      | long                                                      |  Maximum runtime in seconds, use -1 to set infinite
 default: -1 = infinite                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| verbosity                     | int                                                       |  Verbosity level
 default: 3 on MPI rank 0, 0 otherwise.                                                                                                         |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| move_shift                    | bool                                                      |  Add shifting an operator as a move?                                                                                                                             |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| move_double                   | bool                                                      |  Add double insertions as a move?                                                                                                                                |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| use_trace_estimator           | bool                                                      |  Calculate the full trace or use an estimate?                                                                                                                    |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G_tau                 | bool                                                      |  Measure G(tau)? :math:`G_{ij}(\tau)=G_{ji}^*(\tau)` is enforced for the resulting G(tau)                                                                        |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G_l                   | bool                                                      |  Measure G_l (Legendre)? Note, no hermiticity in G_l is ensured                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_O_tau                 | std::optional<std::pair<many_body_op_t, many_body_op_t> > |  Measure O_tau by insertion                                                                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_O_tau_min_ins         | int                                                       |  Minumum of operator insertions in: O_tau by insertion measure                                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_tau                | bool                                                      |  Measure G^4(tau,tau',tau'') with three fermionic times.                                                                                                         |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw                 | bool                                                      |  Measure G^4(inu,inu',inu'') with three fermionic frequencies.                                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw_nfft            | bool                                                      |  Measure G^4(inu,inu',inu'') with three fermionic frequencies.                                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw_pp              | bool                                                      |  Measure G^4(iomega,inu,inu') within the particle-particle channel.                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw_pp_nfft         | bool                                                      |  Measure G^4(iomega,inu,inu') within the particle-particle channel.                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw_ph              | bool                                                      |  Measure G^4(iomega,inu,inu') within the particle-hole channel.                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iw_ph_nfft         | bool                                                      |  Measure G^4(iomega,inu,inu') within the particle-hole channel.                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iwll_pp            | bool                                                      |  Measure G^2(iomega,l,l') within the particle-particle channel.                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iwll_ph            | bool                                                      |  Measure G^2(iomega,l,l') within the particle-hole channel.                                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_block_order        | triqs_cthyb::block_order                                  |  Order of block indices in the definition of G^2.                                                                                                                |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_blocks             | std::set<std::pair<std::string, std::string> >            |  List of block index pairs of G^2 to measure.
 default: measure all blocks                                                                                       |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_n_tau              | int                                                       |  Number of imaginary time slices for G^4 measurement.                                                                                                            |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_n_bosonic          | int                                                       |  Number of bosonic Matsubara frequencies for G^4 measurement.                                                                                                    |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_n_fermionic        | int                                                       |  Number of fermionic Matsubara frequencies for G^4 measurement.                                                                                                  |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_n_l                | int                                                       |  Number of Legendre coefficients for G^4(iomega,l,l') measurement.                                                                                               |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_G2_iwll_nfft_buf_size | int                                                       |  NFFT buffer size for G^4(iomega,l,l') measurement.                                                                                                              |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| nfft_buf_sizes                | std::map<std::string, int>                                |  NFFT buffer sizes for different blocks
 default: 100 for every block                                                                                            |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_pert_order            | bool                                                      |  Measure perturbation order?                                                                                                                                     |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| measure_density_matrix        | bool                                                      |  Measure the reduced impurity density matrix?                                                                                                                    |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| use_norm_as_weight            | bool                                                      |  Use the norm of the density matrix in the weight if true, otherwise use Trace                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| performance_analysis          | bool                                                      |  Analyse performance of trace computation with histograms (developers only)?                                                                                     |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| proposal_prob                 | std::map<std::string, double>                             |  Operator insertion/removal probabilities for different blocks
 type: dict(str:float)
 default: {}                                                               |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| move_global                   | std::map<std::string, indices_map_t>                      |  List of global moves (with their names).
 Each move is specified with an index substitution dictionary.
 type: dict(str : dict(indices : indices))
 default: {} |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| move_global_prob              | double                                                    |  Overall probability of the global moves                                                                                                                         |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| imag_threshold                | double                                                    |  Threshold below which imaginary components of Delta and h_loc are set to zero                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| det_init_size                 | int                                                       |  The maximum size of the determinant matrix before a resize                                                                                                      |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| det_n_operations_before_check | int                                                       |  Max number of ops before the test of deviation of the det, M^-1 is performed.                                                                                   |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| det_precision_warning         | double                                                    |  Threshold for determinant precision warnings                                                                                                                    |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| det_precision_error           | double                                                    |  Threshold for determinant precision error                                                                                                                       |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| det_singular_threshold        | double                                                    |  Bound for the determinant matrix being singular, abs(det) > singular_threshold. If <0, it is !isnormal(abs(det))                                                |
+-------------------------------+-----------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+


Member functions
----------------

+-----------------------------------------------------------+--+
| :ref:`(constructor) <triqs_cthyb__params_t__constructor>` |  |
+-----------------------------------------------------------+--+

.. toctree::
    :hidden:

    params_t/constructor